Finish project (without bruteForse)